# rules_engine

./: .gitignore  Makefile  README.md  README_ASYNC.md  REFACTORING_NOTES.md  RULE_TESTER_IMPLEMENTATION.md  pyproject.toml  start_server.sh  test_backend.py
src/: acoes.py  api_server.py  exemplo_async.py  main.py  motor_regras.py  regras.py
src/frontend/motor-regras-frontend/: EXEMPLO_AI_ANALYSIS.md  README_AI_ANALYSIS.md  README_RULE_TESTER.md  package-lock.json  package.json
src/frontend/motor-regras-frontend/src/: AIAnalyzer.css  AIAnalyzer.js  AIAnalyzerAntigo.js  App.css  App.js  ErrorBoundary.js  Explanation.js  JsonOutput.js  LocalAIAnalyzer.css  LocalAIAnalyzer.js  RuleCanvas.js  RuleNode.js  RuleTester.css  RuleTester.js  Sidebar.js  Toolbox.js  TrashCan.js  useRuleBuilder.js  utils.js
src/frontend/motor-regras-frontend/src/contexts/: FieldsContext.js
src/frontend/motor-regras-frontend/src/hooks/: useFlowBuilder.js
src/frontend/motor-regras-frontend/src/nodes/: AndNode.js  ComparisonNode.js  IfNode.js  OrNode.js  ResultNode.js  VarNode.js
src/lib/: json_logic.py
src/tests/: test_async_support.py  test_benchmark_complete.py  test_best_practices.py  test_json_logic.py  test_load_performance_comparison.py  test_load_test.py  test_performance_sync_async.py  test_quick_load_performance.py  test_simple_debug.py
