[tool.poetry]
name = "poc-jsonlogic"
version = "0.1.0"
description = "POC de utilizacao da lib JsonLogic para orquestracao de regras"
authors = ["Talvane Augusto <talvane.magalhaes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[[tool.mypy.overrides]]
module = ["motor_regras.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
